<resources>
    <string name="app_name">AskNShare</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_vector">Welcome Vector</string>
    <string name="welcome_to_asknshare">Welcome To AskNShare!</string>
    <string name="welcome_decription">A community where students help each other overcome challenges, solve problems, and share knowledge.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="to_continue_your_account">To continue your account</string>
    <string name="register_your_account">Register your account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="user122">User122</string>
    <string name="password_hint">*********</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="i_agree_with_terms_and_conditions">I agree with Terms and Conditions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="or">OR</string>
    <string name="signup_with">SignUp with</string>
    <string name="google">Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="setup_your_profile">Setup Your Profile</string>
    <string name="user123">User123</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="profession_role">Profession / Role</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="bio">Bio</string>
    <string name="skip">Skip</string>
    <string name="area_of_expertise">Area of Expertise</string>
    <string name="interest_hobbies">Interests / Hobbies</string>
    <string name="institution_organization">Institution / Organization</string>
    <string name="location">Location</string>
    <string name="home">Home</string>
    <string name="ask">Ask Anything</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="post_a_question">Post a Question</string>
    <string name="get_ai_help">Get AI Help</string>
    <string name="post_anonymously">Post Anonymously</string>
    <string name="hello_user_fullname">Hello User FullName</string>
    <string name="trending_questions">Trending Questions</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="latest_questions">Latest Questions</string>
    <string name="_200_points">200 Points</string>
    <string name="legend">Legend</string>
    <string name="leader_pic">Leader Pic</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar tempus arcu eget pulvinar. Duis et viverra eros. In iaculis molestie enim, eu accumsan nisi bibendum ac. Duis et viverra eros. In iaculis molestie enim, eu accumsan nisi bibendum ac</string>
    <string name="_12_min_ago">12 min ago</string>
    <string name="_300">300</string>
    <string name="image">image</string>
    <string name="popular_tags">Popular Tags</string>
    <string name="edit">Edit</string>
    <string name="rank">Rank</string>
    <string name="helper">Helper</string>
    <string name="question_posted">Questions</string>
    <string name="_10">10</string>
    <string name="answers_given">Answers</string>
    <string name="upvotes">Likes</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="my_questions">My Questions</string>
    <string name="my_answers">My Answers</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back_button">Back Button</string>
    <string name="title_here">Title Here</string>
    <string name="ask_anything">Ask anything</string>
    <string name="discard">Discard</string>
    <string name="publish_post">Publish</string>
    <string name="save_changes">Save Changes</string>
    <string name="reply_to_post">Reply to Post</string>
    <string name="publish_reply">Publish Reply</string>
    <string name="reply_to">Reply To</string>
    <string name="next">Next</string>
    <string name="ask1">Ask</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="capture_from_camera">Capture from Camera</string>
    <string name="select_your_interests">Select Your Interests</string>
    <string name="select_your_expertise">Select Your  Expertise</string>
    <string name="done">Done</string>
    <string name="warning">Warning</string>
    <string name="slow_or_poor_internet_connection">Slow or Poor Internet Connection</string>
    <string-array name="expertise_list">
        <item>Software Development</item>
        <item>Data Science</item>
        <item>Artificial Intelligence</item>
        <item>Machine Learning</item>
        <item>Cybersecurity</item>
        <item>Cloud Computing</item>
        <item>Web Development</item>
        <item>Mobile App Development</item>
        <item>Electrical Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Civil Engineering</item>
        <item>Chemical Engineering</item>
        <item>Biotechnology</item>
        <item>Pharmaceutical Sciences</item>
        <item>Environmental Science</item>
        <item>Physics</item>
        <item>Mathematics</item>
        <item>Economics</item>
        <item>Psychology</item>
        <item>Political Science</item>
        <item>Sociology</item>
        <item>Linguistics</item>
        <item>Architecture</item>
        <item>Business Administration</item>
        <item>Marketing</item>
        <item>Finance</item>
        <item>Law</item>
        <item>Medicine</item>
        <item>Education</item>
        <item>Journalism</item>
        <item>Fine Arts</item>
        <item>Performing Arts</item>
        <item>Game Design</item>
        <item>Animation</item>
        <item>Digital Marketing</item>
        <item>Renewable Energy</item>
        <item>Nanotechnology</item>
        <item>Aerospace Engineering</item>
        <item>Marine Biology</item>
        <item>Astrophysics</item>
        <item>Neuroscience</item>
        <item>Anthropology</item>
        <item>Philosophy</item>
        <item>History</item>
        <item>Literature</item>
        <item>Geography</item>
        <item>Statistics</item>
        <item>Robotics</item>
        <item>Material Science</item>
        <item>Quantum Computing</item>
        <item>Blockchain Technology</item>
    </string-array>
    <string-array name="hobbies">
        <item>Reading</item>
        <item>Traveling</item>
        <item>Photography</item>
        <item>Gaming</item>
        <item>Cooking</item>
        <item>Sports</item>
        <item>Music</item>
        <item>Art</item>
        <item>Fitness</item>
        <item>Research</item>
        <item>Writing</item>
        <item>Public Speaking</item>
        <item>Volunteering</item>
        <item>Entrepreneurship</item>
        <item>Programming</item>
        <item>Robotics</item>
        <item>Environmental Activism</item>
        <item>History</item>
        <item>Science Experiments</item>
        <item>Graphic Design</item>
        <item>Dance</item>
        <item>Theater</item>
        <item>Astronomy</item>
        <item>Language Learning</item>
    </string-array>
    <string-array name="roles_list">
        <item>Software Engineer</item>
        <item>Data Scientist</item>
        <item>Product Manager</item>
        <item>UX/UI Designer</item>
        <item>DevOps Engineer</item>
        <item>Marketing Specialist</item>
        <item>Teacher</item>
        <item>Student</item>
        <item>Doctor</item>
        <item>Lawyer</item>
        <item>Entrepreneur</item>
        <item>Researcher</item>
        <item>Engineer</item>
        <item>Scientist</item>
        <item>Analyst</item>
        <item>Consultant</item>
        <item>Designer</item>
        <item>Developer</item>
        <item>Architect</item>
        <item>Writer</item>
        <item>Artist</item>
        <item>Musician</item>
        <item>Athlete</item>
        <item>Activist</item>
        <item>Volunteer</item>
        <item>Intern</item>
        <item>Lab Technician</item>
        <item>Pharmacist</item>
        <item>Therapist</item>
        <item>Counselor</item>
        <item>Librarian</item>
        <item>Curator</item>
        <item>Animator</item>
        <item>Game Developer</item>
        <item>Social Media Manager</item>
        <item>Financial Analyst</item>
        <item>Policy Advisor</item>
        <item>Environmentalist</item>
        <item>Historian</item>
        <item>Philosopher</item>
        <item>Linguist</item>
        <item>Translator</item>
        <item>Biologist</item>
        <item>Chemist</item>
        <item>Physicist</item>
        <item>Mathematician</item>
        <item>Statistician</item>
        <item>Economist</item>
        <item>Psychologist</item>
        <item>Sociologist</item>
        <item>Anthropologist</item>
        <item>Geographer</item>
        <item>Astronomer</item>
        <item>Neuroscientist</item>
        <item>Robotics Engineer</item>
        <item>AI Specialist</item>
        <item>Blockchain Developer</item>
        <item>Renewable Energy Engineer</item>
        <item>Nanotechnologist</item>
        <item>Aerospace Engineer</item>
        <item>Marine Biologist</item>
        <item>Astrophysicist</item>
        <item>Material Scientist</item>
    </string-array>
</resources>