<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:elevation="10dp"
    android:padding="20dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_logout"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/montserrat_black"
        android:textColor="@color/app_dark_blue"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/are_you_sure_you_want_to_logout"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/app_dark_blue"
        android:paddingBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:background="@drawable/grey_stroke_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/cancel"
            android:layout_marginEnd="40dp"
            android:textAllCaps="false"
            android:textColor="@color/app_medium_blue"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:background="@drawable/blue_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"/>
    </LinearLayout>

</LinearLayout>
